--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,5 @@
 # definindo o root level de logs para DEBUG e o apender para stdout
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
 
 # definindo o stdout para o Console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
