--- a/log4j.properties
+++ b/log4j.properties
@@ -1,10 +1,11 @@
 # definindo o root level de logs para DEBUG e o apender para stdout
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=DEBUG, stdout
+log4j.logger.org.hibernate=WARN
 
 # definindo o stdout para o Console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%5p] %d{mm:ss} (%F:%M:%L)%n%m%n%n
+log4j.appender.stdout.layout.ConversionPattern=[%5p] %d{mm:ss} (%C)%n%m%n%n
 
 # Log em arquivo
 # Para arquivo de backup
