--- a/build.xml
+++ b/build.xml
@@ -119,6 +119,7 @@
 				<arg value="${mensagem}" />
 			</args>
 		</git>
+		<git command="pull" />
 		<git command="push" />
 	</target>
 </project>
