Login Box pronto.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,6 +9,14 @@
         <url-pattern>/imagem/imagemservlet</url-pattern>
     </servlet-mapping>
     <servlet>
+        <servlet-name>clienteservlet</servlet-name>
+        <servlet-class>org.xcommerce.servlets.ClienteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>clienteservlet</servlet-name>
+        <url-pattern>/cliente/clienteservlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>EstoqueServlet</servlet-name>
         <servlet-class>org.xcommerce.servlets.EstoqueServlet</servlet-class>
     </servlet>
